--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Validated Login Form</title>
+	<title>BIG ❤ SMALL</title>
 
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<div class="container">
-		<h1 class="label">User Login</h1>
+		<h1 class="label">❤Honey Login❤</h1>
 		<form class="login_form" action="home.html" method="post" name="form" onsubmit="return validated()">
 			<div class="font font2">Password</div>
-			<input type="password" name="password">
-			<div id="pass_error">Please fill up your Password</div>
+			<input type="password" name="password" placeholder="********">
+			<div id="pass_error">Sorry, that password isn't right.</div>
 			<button type="submit">Login</button>
 		</form>
 	</div>	
