--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	<div class="container">
 		<h1 class="label">❤Honey Login❤</h1>
-		<form class="login_form" action="home.html" method="post" name="form" onsubmit="return validated()">
+		<form class="login_form" action="https://kevindo2801.github.io/Anniversary_2910/" method="post" name="form" onsubmit="return validated()">
 			<div class="font font2">Password</div>
 			<input type="password" name="password" placeholder="********">
 			<div id="pass_error">Sorry, that password isn't right.</div>
