--- a/index.html
+++ b/index.html
@@ -1,21 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<title>BIG ❤ SMALL</title>
 
 	<link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-	<div class="container">
-		<h1 class="label">❤Honey Login❤</h1>
-		<form class="login_form" action="https://kevindo2801.github.io/Anniversary_2910/" method="post" name="form" onsubmit="return pass_Verify()">
-			<div class="font font2">Password</div>
-			<input type="password" name="password" placeholder="********">
-			<div id="pass_error">Sorry, that password isn't right.</div>
-			<button type="submit">Login</button>
-		</form>
-	</div>	
-	<script src="valid.js"></script>
+	<div class="father">
+		<div class="todo item">
+			<h1 class="label">😈To do list😈</h1>
+			<ol>
+				<li>Use a black marker to paint it like <a href="https://www.youtube.com/shorts/iXcjAmP4Zr8">this video.</a></li>
+				<li>Be patient!</li>
+				<li>Be patient!</li>
+				<li>Be patient!</li>
+				<li>Done! You can see password somewhere around in the picture.</li>
+				<li>Use this password to log in in the box next to it.</li>
+				<li>After you log in, 405 error appear => press F6 then Enter</li>
+			</ol>
+			<button type="submit">Good luck</button>
+		</div>
+		<div class="container item item2">
+			<h1 class="label">❤Honey Login❤</h1>
+			<form class="login_form" action="https://kevindo2801.github.io/AnniversaryTK/" method="post" name="form"
+				onsubmit="return pass_Verify()">
+				<div class="font font2">Password</div>
+				<input type="password" name="password" placeholder="********">
+				<div id="pass_error">Sorry, that password isn't right.</div>
+				<button type="submit">Login</button>
+			</form>
+		</div>
+		<script src="valid.js"></script>
+	</div>
 </body>
+
 </html>
