--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				<li>Be patient!</li>
 				<li>Be patient!</li>
 				<li>Be patient!</li>
-				<li>Done! You can see password somewhere around in the picture.</li>
+				<li>Done! You can see password - numeric form - somewhere around in the picture.</li>
 				<li>Use this password to log in in the box next to it.</li>
 				<li>After you log in, 405 error appear => press F6 then Enter</li>
 			</ol>
